@@ -1,3 +1,8 @@
+2006-10-24 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>
+
+	* device/lib/serial_io.c: Default putchar() and getchar() for
+	  mcs51 uses serial port.
+
 2006-10-23 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/mcs51/gen.c (movc): improved check for 0 and 1, see RFE 1582704
